<resources>
    <string name="app_name">اقرأ</string>
    <string name="img">img</string>

    ///
    <array name="tsbeh_array">
        <item>الحمد لله</item>
        <item>سبحان الله</item>
        <item>الله اكبر</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_next_prayer">يُرفع %s في تمام الساعة</string>
    <string name="label_next_prayer_reminder">%s مُتبقية حسب توقيت موقعك الحالي</string>
    <string name="label_next_prayer_reminder_page"> يحين موعد الصلاه في %s</string>
    <string name="label_next_prayer_page">متبقى على %s</string>
    <string name="label_skip">تجاهل</string>

    <string name="label_masbeha">المسبحة</string>
    <string name="label_quran">القرآن الكريم</string>
    <string name="label_tilawa">التلاوات</string>
    <string name="label_azkar">الأذكار</string>
    <string name="label_qibla">اتجاه القبلة</string>
    <string name="label_radio">الإذاعة</string>
    <string name="label_prayer_time">مواقيت الصلاة</string>
    <string name="label_hades">الأحاديث النبوية</string>
    <string name="label_sebha_count">%s \nتسبيحة</string>
    <string name="label_sebha_sum_all">إجمالي التسبيحات : %s تسبيحة</string>
    <string name="label_choose_sebha">اختر التسبيحة</string>
    <string name="label_sobhan_allah">سبحان الله</string>
    <string name="label_open_location_for_qibla">قم بتشغيل خدمة الموقع في جهازك لتتمكن من تحديد اتجاه القبلة</string>
    <string name="label_evening">عند المساء</string>
    <string name="label_morning">عند الصباح</string>
    <string name="label_my_zekr">أذكارى</string>
    <string name="label_doaa_nabwy">أدعية نبوية</string>
    <string name="label_sleeping">عند النوم</string>
    <string name="label_wake_up">عند الأستيقاظ</string>
    <string name="label_doaa_quran">أدعية قرآنية</string>
    <string name="label_after_tasleem">بعد التسليم</string>
    <string name="label_tsabeh">تسابيح</string>
    <string name="label_zekr_count">عدد المرات: %s</string>
    <string name="label_add_zekr">أضِف الذِكر الخاص بك</string>
    <string name="label_save">حفظ</string>
    <string name="label_cancel">الغاء</string>
    <string name="prayer_time_notification_come">حان الآن موعد آذان %s</string>
    <string name="athan">آذان</string>
    <string name="fajr">الفجر</string>
    <string name="sunrise">الشروق</string>
    <string name="dhuhr">الظهر</string>
    <string name="asr">العصر</string>
    <string name="maghrib">المغرب</string>
    <string name="isha">العشاء</string>
    <string name="label_hadeth_count">%s حديث</string>
    <string name="open_location_for_prayers">تأكد من تشغيل خدمة الموقع والانترنت لتتمكن من معرفة مواقيت الصلاة</string>
    <string name="label_hadeth_details">تفاصيل الحديث</string>
    <string name="label_hadeth_dsc">شرح الحديث</string>
    <string name="label_hadeth_dsc_full">يُحَاسِبُ الله -تعالى- الْخَلَائِقَ يوم القيامة، ثُمَّ يَقْضِى بينهم بعدله، ويبدأ من المظالم بالْأَهم، وبما أَنَّ الدِّمَاء هي أَعْظم وأَهَمُّ ما يكون من المظَالمِ فِإِنَّهَا أَوْلُ مَا يُقْضَى بِهِ منها في ذلك اليومِ العظيمِ، وهذا فيما بين العباد في المظالم، أما أعمال العبد فأول ما .",ينظر فيه الصلاة</string>

    <string name="label_introWelcome1_title">القرآن الكريم كاملا بين يديك</string>
    <string name="label_introWelcome2_title">وردك الكامل من الاذكار المختلفه</string>
    <string name="label_introWelcome3_title">تحديد اتجاه القبلة ومواقيت الصلاة</string>

    <string name="label_introWelcome1_content">القرآن الكريم مكتوبا ومسموعا</string>
    <string name="label_introWelcome2_content">مكتبه متنوعه من الاذكار المختلفة</string>
    <string name="label_introWelcome3_content">لتسهيل أداه عبادتك اليومية في مواعيدها</string>



</resources>