<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.kamel.akra.app.presentation.azkar.myAzkar.MyAzkarViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".app.presentation.azkar.myAzkar.MyAzkarFragment">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:onClick="@{() -> viewModel.onBackClicked()}"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/text_view_pageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/label_my_zekr"
            android:textColor="@color/color_6992AC"
            android:textSize="@dimen/_20ssp"
            style="@style/MyTextViewStyleRegular"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_back"
            app:layout_constraintEnd_toStartOf="@+id/image_view_back"
            app:layout_constraintTop_toTopOf="@+id/image_view_back" />

        <TextView
            android:id="@+id/text_view_add"
            style="@style/MyTextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onAddZekrClicked()}"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_20ssp"
            android:paddingStart="@dimen/_20ssp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/label_add_zekr"
            android:textSize="@dimen/_16ssp"
            android:background="@drawable/_custom_bg_curve"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_back"
            app:drawableEndCompat="@drawable/ic_add_zekr"
            android:drawablePadding="@dimen/_5sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_azkar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_add"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_azkar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>