<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="onConfirmClickedListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="onCancelClickedListener"
            type="android.view.View.OnClickListener" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/_custom_bg_curve">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_add"
                    style="@style/MyTextViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/label_add_zekr"
                    android:textColor="@color/color_6992AC"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_text_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:inputType="text"
                    android:hint="اكتب هنا"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_add" />


                <EditText
                    android:id="@+id/edit_text_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:inputType="number"
                    android:hint="عدد المرات"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_content" />


                <Button
                    android:id="@+id/btn_sava"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/_custom_bg_curve"
                    android:backgroundTint="@color/color_AAB9C4"
                    android:fontFamily="@font/droid_arabic_kufi"
                    android:onClick="@{(view) -> onConfirmClickedListener.onClick(view)}"
                    android:text="@string/label_save"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/edit_text_content"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_count" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/_custom_bg_curve"
                    android:fontFamily="@font/droid_arabic_kufi"
                    android:onClick="@{(view) -> onCancelClickedListener.onClick(view)}"
                    android:text="@string/label_cancel"
                    android:textColor="@color/color_6992AC"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_sava"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/edit_text_content"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_count" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>